--- a/package.json
+++ b/package.json
@@ -31,14 +31,18 @@
     "karma": ">=0.9"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "~0.4.5",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-karma": "~0.6.2",
     "karma-detect-browsers": "~0.1.2",
-    "grunt-bump": "0.0.14"
+    "grunt-git": "~0.2.14",
+    "grunt-bump": "0.0.14",
+    "grunt-publish": "0.0.3",
+    "load-grunt-tasks": "~0.6.0"
   },
   "dependencies": {
-    "chalk": "~0.4.0"
+    "chalk": "~0.5.0"
   }
 }
